Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: "New file"
+title: "*New* Malls"
 description: "Description of your new file."
 ---
 
@@ -11,7 +11,7 @@ rfdgdf
 
 gfdfdgbh
 
-<CardGroup cols={2}>
+<CardGroup cols="2">
   <Card title="New Card" icon="sparkles">
     
   </Card>
