Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: "*New* Malls"
-description: "Description of your new file."
+title: "*New*"
+description: "~ Malls of GACHA Corp. ~"
 ---
 
 rfdgdf
